# gitquicktool

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cli/: commands.py
core/: config.py  github_api.py  mingit.py  supabase_sync.py  updater.py  vault.py
docs/: implement-plan.md  task.md
docs/sql/: create_tables.sql
ui/: app.py  dashboard_tab.py  settings_tab.py
